# Objective_Programing_First_Touch

./: CMakeLists.txt  CMakePresets.json  Events.h  PO lab6  zadanie do analizy i implemenatcji v1.docx  PlatformAdmin.cpp  PlatformAdmin.h  Post.h  README.md  User.cpp  UserGroup.h  main.cpp  membersOfGroup.cpp  membersOfGroup.h  promtLog.txt  readMe.md
Objective_Programing_First_Touch.git/: config  packed-refs
PO_2/Po_2_1/clients/: clients.cpp  clients.h
PO_5_1_Bajka/: .$uml.drawio.bkp  CMakePresets.json  main.cpp
PO_5_1_Bajka/headers/: mcguffin.h  protagonists.h  scene.h  villans.h
Po_2_1/employes/: CMakeLists.txt
Po_2_2/: CMakePresets.json  main.cpp  settings.json
Po_2_2/Cars/: .ninja_deps  .ninja_log  CMakeCache.txt  cmake_install.cmake
Po_2_2/car/: CMakeLists.txt
Po_2_3/: CMakeLists.txt
Po_2_3/CarCustomEngines/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Po_2_3/CarCustomEngines/.cmake/api/v1/reply/: cache-v2-50ef5a4e1e411d7106ec.json  cmakeFiles-v1-fee304ecc39ebe20fc98.json  codemodel-v2-77cc18d9f51dc93a5a3b.json  directory-tractor-Debug-2325ba0eb464ec5b4ae9.json  index-2025-11-10T20-22-11-0722.json  target-Car-Debug-e83fde4543498995b46a.json  target-End-Debug-8129fef24be8515b7996.json  target-Engine-Debug-267be814b2d99a1e748c.json  target-Tractor-Debug-222adf2b8615817cc3f8.json
Po_2_3/CarCustomEngines/car/: cmake_install.cmake
Po_2_3/CarCustomEngines/engine/: cmake_install.cmake
Po_2_3/CarCustomEngines/tractor/: cmake_install.cmake
Po_2_3/car/: car.cpp
Po_3_2/: CMakeLists.txt
Po_3_2/clients/: clients.h
Po_3_2/livingOrganism/paitients/: paitients.h
Po_4_1/: CMakeLists.txt
Po_4_1/headers/: people.h
Po_4_1/src/: people.cpp
animals/: CMakeLists.txt  animals.h
car/: CMakeLists.txt  car.cpp  car.h
clients/: CMakeLists.txt  clients.cpp  clients.h
employees/: CMakeLists.txt  employees.h
employes/: CMakeLists.txt  employes.cpp  employes.h
engine/: CMakeLists.txt  engine.cpp  engine.h
headers/: ActiveActor.h  AnaliticalData.h  Archer.h  DarkFortress.h  DivisonOfBank.h  Event.h  Events.h  ImportantPlace.h  Item.h  Items.h  List.h  Location.h  MemberOfGroup.h  Menu.h  NPC.h  NPCCrafter.h  NPCHealer.h  NPCQuestGiver.h  NPCShopKeeper.h  NPCTrader.h  PlaceOFImportance.h  PlatformAdmin.h  Player.h  PlayerArcher.h  PlayerWarrior.h  PlayerWizzard.h  Post.h  Quest.h  SubLocation.h  Swamp.h  TemplateLib.h  Town.h  User.h  UserGroup.h  UserInterface.h  Warrior.h  Weapon.h  Wizzard.h  account.h  actors.h  (+11 more)
headers/npc/: NPC.h  NPCTrader.h
headers/player/: Player.h  PlayerClasses.h
livingOrganism/: CMakeLists.txt
livingOrganism/paitients/: CMakeLists.txt  paitients.cpp  paitients.h
livingOrganism/person/: CMakeLists.txt  person.cpp  person.h
mechanic/: CMakeLists.txt  mechanic.cpp  mechanic.h
people/: CMakeLists.txt  people.h
plikiPowerDesignera/: Workspace.sws
plikiPowerDesignera/umlProjectGeneral/: UMLdiagramOOM.oob  UMLdiagramOOM.oom  umlProjectGeneral.pjb  umlProjectGeneral.prj
previousWorks/PO_5_1_Bajka/: uml.drawio
previousWorks/PO_5_2_SocialMoghul/: CMakeLists.txt  main.cpp
previousWorks/Po_3_1/: .$classDiagram.drawio.bkp  CMakeLists.txt  CMakePresets.json  classDiagram.drawio  main.cpp
previousWorks/Po_3_1/headers/: List.h
previousWorks/Po_3_1/src/: list.cpp
previousWorks/Po_3_2/: CMakeLists.txt  CMakePresets.json  main.cpp
previousWorks/Po_4_1/: main.cpp  umlPRoject.drawio
src/: ActiveActor.cpp  Archer.cpp  CMakeLists.txt  DivisonOfBank.cpp  Location.cpp  NPC.cpp  NPCCrafter.cpp  NPCHealer.cpp  NPCQuestGiver.cpp  NPCShopKeeper.cpp  NPCTrader.cpp  PlaceOFImportance.cpp  Player.cpp  Weapon.cpp  account.cpp  list.cpp  people.cpp
src/NPCs/: CMakeLists.txt  NPC.cpp  NPCTrader.cpp
src/Players/: CMakeLists.txt  ImportantPlace.cpp  Items.cpp  Player.cpp  PlayerClasses.cpp  SubLocation.cpp
src/Quests/: CMakeLists.txt  Quest.cpp
src/Weapons/: CMakeLists.txt  Weapon.cpp
src/actors/: CMakeLists.txt  actors.cpp  protagonists.cpp  villans.cpp
src/eventOnWebsite/: CMakeLists.txt  Event.cpp  Post.cpp  UserGroup.cpp  membersOfGroup.cpp
src/eventsOnWebsite/: Events.cpp  Post.cpp  UserGroup.cpp
src/general/: ActiveActor.cpp  CMakeLists.txt  Location.cpp  UserInterface.cpp
src/items/: CMakeLists.txt  Item.cpp
src/mcguffin/: CMakeLists.txt  mcguffin.cpp
src/npc/: CMakeLists.txt  NPC.cpp  NPCTrader.cpp
src/numbers/: CMakeLists.txt  numbers.cpp
src/people/: CMakeLists.txt  PlatformAdmin.cpp  User.cpp  membersOfGroup.cpp
src/scene/: CMakeLists.txt  scene.cpp
stdHeader/: CMakeLists.txt  stdHeader.cpp  stdHeader.h
tractor/: tractor.cpp  tractor.h
(+68 files in other folders)
